Added a Monkees logo image to the index.html. Used a class='responsive' to make sure the image itself can adjust according to screen size.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/style/style.css" type="text/css" />
   </head>
   <body>
-
+      
+    <header class="logo">
+              <img src="assets/images/monkees-50-logo.jpg" class="responsive"/>
+    </header>   
   </body>
 </html>
