I want my header to consist of the band's logo overlayed with a background image of them performing. I still need to reposition the background image to make it more presentable.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
       
     <header class="logo">
+        <div class="hero-image">
               <img src="assets/images/monkees-50-logo.jpg" class="responsive"/>
+        </div>      
     </header>   
   </body>
 </html>
