Was able to make the background image fit the header to allow the user to see every member of the band. None of the images of The Monkees I can find are of great resolution, so please consider that when looking at the header.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/style/style.css" type="text/css" />
   </head>
+  
   <body>
-      
-    <header class="logo">
+    <header class="logo" class="responsive">
         <div class="hero-image">
               <img src="assets/images/monkees-50-logo.jpg" class="responsive"/>
         </div>      
+        
+                <a href="Index.html">
+                  <button>Home</button>
+                </a>  
+                <a href="Music.html">
+                  <button>Music</button>
+                </a>
+                <a href="Tours.html">
+                  <button>Tour Dates</button>
+                </a>  
+                <a href="Contact.html">
+                  <button>Contact</button>
+                </a>
     </header>   
+
   </body>
 </html>
