Created a table of page indexes (Home, Music, Tour Dates, Contact Page) for the home page so users can navigate the site. Also made the Monkees50 logo a hyperlink back to the index page.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <header class="logo" class="responsive">
         <div class="hero-image">
+            <a href="index.html">  
               <img src="assets/images/monkees-50-logo.jpg" class="responsive"/>
+            </a> 
         </div>      
         
                 <a href="Index.html">
